--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,7 +1,9 @@
 spring:
   application:
-    name: zuul-remote-server
+    name: zuul-server
   cloud:
     config:
       uri: http://localhost:8888
       fail-fast: true             #Arranque mediante config-service (true)
+  profiles:
+    active: native
