--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -5,5 +5,7 @@ spring:
     config:
       uri: http://localhost:8888
       fail-fast: true             #Arranque mediante config-service (true)
+      enabled: true
   profiles:
     active: native
+
